# projects-2022-technical-screening

easy/: Cargo.toml  README.md  easy.js  package-lock.json  package.json
easy/src/: lib.rs
hard/: .gitignore  Cargo.toml  README.md  conditions.json  pyproject.toml  test_hard.py
hard/src/: lib.rs
