[package]
name = "hard"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hard"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.15.1", features = ["extension-module"] }
serde = "1.0.133"
serde_json = "1.0.74"
nom = "7.1.0"
strsim = "0.10.0"
